# SeminarModernC-

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  generator_fib.cpp  generator_fib.js  range-adapter-mathe-zusammenfassung.tex  ranges_lazy.cpp
measurements/: clang-iter-2.csv  clang-iter.csv  clang-ranges-2.csv  clang-ranges.csv  gcc-iter.csv  gcc-ranges.csv
paper_template_student/: cites.bib  samplepaper.tex
src/: benchmark-iter.cpp  benchmark-ranges.cpp
